__devops/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        imagePullPolicy: IfNotPresent
        image: 172.18.103.163:5000/rsaa-kc
        ports:
        - containerPort: 8080
        args: ["start-dev", "--hostname-debug=true"]

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4 256k"
spec:
  rules:
  - host: auth2.permkrai.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  keycloak
            port:
              number: 80
  ingressClassName: nginx
